--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div> -->
     <div class="taskbar">
         <img src="icons.PNG" alt="">
-        <img class="right" src="taskbarright.PNG" alt="">
+        <img class="right" src="taskbarright.png" alt="">
     </div>
     <div class="startmenu">
-        <img src="startmenu.PNG" alt="">
+        <img src="startmenu.png" alt="">
     </div>
     <video autoplay muted id="vid">
         <source src="video.webm" type="video/webm">
